--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
 		<div class="jarallax">
 			<div class="container">
 				<div class="foo-left">
-					<p>Copyright &copy; 2017.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+<!-- 					<p>Copyright &copy; 2017.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p> -->
 				</div>
 				<div class="w3ls_copyright_right">
 						<ul>
