--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 				<span class="glyphicon glyphicon-play-circle" aria-hidden="true"></span>
 			</a>
 			<div id="small-dialog" class="mfp-hide">
-				<iframe src="./movie/movie.mp4"></iframe>
+				<iframe src=""></iframe>
 			</div>			
 					
 		</div>
